# Lugn-Trygg

./: .babelrc.json  .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  .vercelignore  .windsurfignore  100_PROCENT_KLART_2025.md  ACCESSIBILITY_AUDIT_CHECKLIST.md  ACCESSIBILITY_AUDIT_FINDINGS.md  ACCESSIBILITY_FIXES_COMPLETE.md  ACCESSIBILITY_TOOLS_REPORT.md  ACTION_REQUIRED.md  AGENTS.md  AI_ANALYTICS_COMPLETE.md  AI_ANALYTICS_FINAL_SUMMARY.md  AI_ANALYTICS_IMPLEMENTATION.md  AI_ANALYTICS_QUICK_START.md  AI_ANALYTICS_README.md  AI_ANALYTICS_VISUAL_GUIDE.md  AI_CHAT_FINAL_VERIFICATION.md  ALLT_KLART_2025.md  ALL_FEATURES_COMPLETE.md  ANALYTICS_FINAL_STATUS.md  ANALYTICS_QUICK_INSTALL.md  ANALYTICS_SYSTEM_100_COMPLETE.md  ANALYTICS_VERIFICATION_COMPLETE.md  API_TESTING_REPORT.md  APP_STATUS_LIVE.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FIX_QUICK_START.md  AUDIT_FIX_SCRIPT.ps1  AUTH_COMPONENTS_DEBUGGING_REPORT.md  AUTH_FIX_COMPLETE.md  (+393 more)
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.production  HONEST_BACKEND_ASSESSMENT.md  MOOD_API_README.md  README.md  REAL_FIX_PLAN.md  SECURITY_AUDIT_COMPLETE.md  babel.cfg  backend_err.txt  backend_err2.txt  backend_err3.txt  backend_out.txt  backend_out2.txt  backend_out3.txt  backup_firestore.py  check_options.py  conftest.py  coverage_report.txt  deploy-production.ps1  deploy-production.sh  deploy.py  e2e_chat_live_test.py  e2e_live_chat_test.py  e2e_live_test.py  firebase_config.py  firestore.indexes.json  generate_secrets.py  gunicorn.conf.py  gunicorn_config.py  load-test.js  load_test.py  load_test_20251110_212622_failures.csv  load_test_20251110_212622_stats.csv  load_test_20251110_212622_stats_history.csv  load_test_report_20251110_212622.html  main.py  messages.pot  (+50 more)
Backend/api_keys/: api_key.key
Backend/backups/: backup_summary_20251110_202143.json  feedback_20251110_202143.json  memories_20251110_202139.json  referrals_20251110_202141.json  users_20251110_202123.json
Backend/docs/: AI_ML_DEPENDENCIES.md  LIVE_FIREBASE_AUTH_VALIDATION_RUNBOOK.md  TEST_COVERAGE_FINAL_PROOF_2025.md  api_documentation.md  api_register.md  requirements-legacy-2024.txt  requirements-monitoring-2024.txt
Backend/live_tests/: test_auth_live_firebase_e2e.py
Backend/monitoring/: prometheus.yml
Backend/scripts/: ai_helpers_smoke_test.py  backup_firestore.py  create_admin.py  deploy.py  generate_secrets.py  openapi_docs.py  pre_launch_check.py  production_start.py  run_live_auth_validation.py  security_audit.py  security_test.py  start_waitress.py
Backend/secrets_backup/: secrets_20251110_180806.txt
Backend/src/: config.py  fierbase_config.py  firebase_config.py  redis_config.py  utils.py
Backend/tests/: __init__.py  conftest.py  e2e_live_test.py  test_admin_routes.py  test_ai_helpers_routes.py  test_ai_routes.py  test_ai_services.py  test_ai_stories_routes.py  test_api.py  test_api_key_rotation_service.py  test_audio_routes.py  test_audit_and_push_service.py  test_audit_and_push_services.py  test_auth_routes.py  test_auth_service.py  test_auth_service_complete.py  test_auth_service_unit.py  test_backup_firestore_script.py  test_backup_service.py  test_biofeedback_breathing.py  test_biofeedback_quick.py  test_cbt_api.py  test_challenges_routes.py  test_chatbot_routes.py  test_complete_system.py  test_consent_api.py  test_consent_service.py  test_crisis_routes.py  test_critical_security.py  test_daily_insights_comprehensive.py  test_dashboard_routes.py  test_docs_routes.py  test_edge_cases_security.py  test_email_service.py  test_feedback_routes.py  test_firebase_config_bom.py  test_health_analytics_service.py  test_health_data_service.py  (+45 more)
(+1190 files in other folders)
